# studio-stud

./: .gitattributes  .gitignore  Cargo.toml  MIGRATION_PLAN.md  README.md  install.ps1  latest.json  rokit.toml
.cursor/: hooks.json
.cursor/commands/: check.md  fix-clippy.md  repo-map.md  review-diff.md  snapshot.md
.cursor/hooks/: format-after-edit.ps1  repo-map.ps1
.cursor/rules/: bridge-protocol.mdc  luau-plugin.mdc  policy-schema-compat.mdc  powershell-glue.mdc  repo-map.mdc  rust-core.mdc  studio-stud.mdc
.github/PULL_REQUEST_TEMPLATE/: beta_to_main.md  dev_to_beta.md
.github/workflows/: ci.yml  deploy.yml  promote.yml  release.yml
addon-plugins/: README.md
addon-plugins/_template/: Addon.plugin.lua  AddonSdk.lua  README.md  addon.json
addon-plugins/boat-modification/: BoatModification.plugin.lua  README.md  addon.json
beta/: latest.json
consumer-template/.studio-stud/: policy.json
dev/: latest.json
docs/: REVIEW_2026-06-02.md  deploy-flow.md  install-deep-dive-and-fresh-device-failure.md  platform-design.md  plugin-review-secure-smart-efficient.md  repo-map.md  tick-protocol-redesign-design.md  usage.md  validation-report-2026-06-03.md  version-compat.md
docs/phases/: PHASE_1_quick_wins.md  PHASE_2_manifest_verify.md  PHASE_3_update_trigger.md  PHASE_4_bundle.md  PHASE_5_ci_channels.md  PHASE_6_correctness.md  PHASE_7_docs.md  README.md
docs/plans/: studio_stud_channel_update_hardening_f3a9c1d2.plan.md  studio_stud_edit_session_gating_a7f2c9e1.plan.md  studio_stud_reliability_fixes.plan.md  studio_stud_stage0_b7d4e0a1.plan.md  studio_stud_stage1_c5e9f2a3.plan.md  studio_stud_stage2_a1f4d6e2.plan.md  studio_stud_stage3_e2c7a9f4.plan.md  studio_stud_stage4_d3b9f1c7.plan.md
examples/: encrypt-artifact.rs  keygen.rs  sign-manifest.rs
plugin/: .darklua.json  .luaurc  StudioStud.plugin.lua  roblox.yml
plugin/src/: AllowList.luau  Capture.luau  Config.luau  Fingerprints.luau  GlobalApi.luau  Hash.luau  Live.luau  Registry.luau  SelfTest.luau  Session.luau  Settings.luau  init.luau  (+2 more)
scripts/: build-local.ps1  bump-version.ps1  configure-github.ps1  install-local.ps1  keygen.ps1  launcher.cmd  launcher.ps1  package-release.ps1  publish-channel.ps1  soak-tick.ps1  validate-live-capture.ps1
secrets/: channel-signing.pub
setup/: Cargo.toml  build.rs  manifest.xml
setup/src/: gui.rs  install_flow.rs  legacy_cleanup.rs  main.rs  theme.rs  update_apply.rs
site/: index.html  install-beta.ps1  install-dev.ps1  install.ps1  latest.json
src/: analyze.rs  bench.rs  capture.rs  cli.rs  conn_registry.rs  diff.rs  http.rs  lib.rs  live.rs  main.rs  obs.rs  output.rs  policy.rs  project.rs  query.rs  reflection.rs  repomap.rs  serve_workers.rs  stage3_cli.rs  stage4_cli.rs  storage.rs  telemetry.rs  tick.rs  update.rs  util.rs  write.rs
tests/: capture_complete.rs  cli_version.rs  golden_outputs.rs  http_reliability.rs  legacy_endpoints_404.rs  live_convergence.rs  manifest_signing.rs  policy_place_ids.rs  project_diff.rs  serve_workers_http.rs  tick_http.rs  write_http.rs  write_safety.rs
tools/: repomap.py
(+93 files in other folders)
