[package]
name = "studio-stud"
version = "0.4.0"
edition = "2024"

[lib]
name = "studio_stud"
path = "src/lib.rs"

[[bin]]
name = "studio-stud"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
full_moon = { version = "2.0.0", features = ["luau"] }
globset = "0.4.16"
rusqlite = { version = "0.40.0", features = ["bundled", "bundled-windows"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
similar = "2.7.0"
tiny_http = "0.12.0"
uuid = { version = "1.23.2", features = ["v4"] }
rbx_reflection = "6.1.0"
rbx_reflection_database = "2.0.2"
ureq = { version = "3.3.0", features = ["json"] }
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[dev-dependencies]
serde_json = "1.0.150"
