[package]
name = "studio-stud-setup"
version = "0.5.1"
edition = "2024"

[[bin]]
name = "studio-stud-setup"
path = "src/main.rs"

[dependencies]
studio-stud = { path = ".." }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.15"
zip = "2.2"

[build-dependencies]
winresource = "0.1"
